modificacion de rutas de imagenes

--- a/blazersycamperas.html
+++ b/blazersycamperas.html
@@ -78,7 +78,7 @@
                     <div class="row row-cols-3 row-cols-md-3 g-4 productos-flex">
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/blazer1.jpg" class="card-img-top div_productos-img"
+                                <img src="images/blazer1-min.jpg" class="card-img-top div_productos-img"
                                     alt="mujer, blazer negro, ">
                                 <div class="card-body ">
                                     <h5 class="card-title">Blazer"blaxi"</h5>
@@ -89,7 +89,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/blazer2.jpg" class="card-img-top div_productos-img"
+                                <img src="images/blazer2-min.jpg" class="card-img-top div_productos-img"
                                     alt="mujer, polera, jean, blazer cuadrille">
                                 <div class="card-body ">
                                     <h5 class="card-title">Blazer"grey"</h5>
@@ -100,7 +100,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/blazer3.jpg" class="card-img-top div_productos-img"
+                                <img src="images/blazer3-min.jpg" class="card-img-top div_productos-img"
                                     alt="mujer, blazer camel">
                                 <div class="card-body">
                                     <h5 class="card-title">Cardigan"barch"</h5>
@@ -111,7 +111,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/campera1.jpg" class="card-img-top div_productos-img"
+                                <img src="images/campera1-min.jpg" class="card-img-top div_productos-img"
                                     alt="mujer, campera negra, pollera con diseno">
                                 <div class="card-body">
                                     <h5 class="card-title">Campera"poomper"</h5>
@@ -122,7 +122,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos div_esp">
-                                <img src="images/campera2.jpg" class="card-img-top div_productos-img"
+                                <img src="images/campera2-min.jpg" class="card-img-top div_productos-img"
                                     alt="campera celeste y blanza">
                                 <div class="card-body">
                                     <h5 class="card-title">Campera "collage"</h5>
@@ -133,7 +133,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/campera3.jpg" class="card-img-top div_productos-img"
+                                <img src="images/campera3-min.jpg" class="card-img-top div_productos-img"
                                     alt="mujer campera de cuero negra">
                                 <div class="card-body ">
                                     <h5 class="card-title">Campera "goot"</h5>
@@ -152,7 +152,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div>
-                        <a href="./zapatos.html"><img src="images/banner2parte.jpg" alt="mujer acostada" width="100%"
+                        <a href="./zapatos.html"><img src="images/banner2parte-min.jpg" alt="mujer acostada" width="100%"
                                 class="hero__imagen"></a>
                     </div>
 
