--- a/carteras.html
+++ b/carteras.html
@@ -77,7 +77,7 @@
                     <div class="row row-cols-3 row-cols-md-3 g-4 productos-flex">
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/cartera1.jpg" class="card-img-top div_productos-img"
+                                <img src="images/cartera1-min.jpg" class="card-img-top div_productos-img"
                                     alt="cartera negra ,cuero">
                                 <div class="card-body ">
                                     <h5 class="card-title">Cartera"ryan"</h5>
@@ -88,7 +88,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/cartera2.jpg" class="card-img-top div_productos-img"
+                                <img src="images/cartera2-min.jpg" class="card-img-top div_productos-img"
                                     alt="mochila negra con cadenas">
                                 <div class="card-body ">
                                     <h5 class="card-title">Mochila "Sasha"</h5>
@@ -99,7 +99,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/cartera3.jpg" class="card-img-top div_productos-img"
+                                <img src="images/cartera3-min.jpg" class="card-img-top div_productos-img"
                                     alt="mujer , cartera violeta, jean">
                                 <div class="card-body">
                                     <h5 class="card-title">Cartera"Violet"</h5>
@@ -110,7 +110,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/cartera4.jpg" class="card-img-top div_productos-img"
+                                <img src="images/cartera4-min.jpg" class="card-img-top div_productos-img"
                                     alt="cartera rosa">
                                 <div class="card-body">
                                     <h5 class="card-title">Cartera"alexxa"</h5>
@@ -121,7 +121,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos div_esp">
-                                <img src="images/cartera5.jpg" class="card-img-top div_productos-img"
+                                <img src="images/cartera5-min.jpg" class="card-img-top div_productos-img"
                                     alt="cartera azuk">
                                 <div class="card-body">
                                     <h5 class="card-title">Cartera"rept"</h5>
@@ -132,7 +132,7 @@
                         </div>
                         <div class="col">
                             <div class="card div_card_productos">
-                                <img src="images/cartera6.jpg" class="card-img-top div_productos-img"
+                                <img src="images/cartera6-min.jpg" class="card-img-top div_productos-img"
                                     alt="mochila violeta">
                                 <div class="card-body ">
                                     <h5 class="card-title">Mochila"Gooy"</h5>
@@ -151,7 +151,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div>
-                        <a href="./zapatos.html"><img src="images/banner2parte.jpg" alt="mujer acostada" width="100%"
+                        <a href="./zapatos.html"><img src="images/banner2parte-min.jpg" alt="mujer acostada" width="100%"
                                 class="hero__imagen"></a>
                     </div>
 
