--- a/jeansypantalones.html
+++ b/jeansypantalones.html
@@ -151,7 +151,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div>
-                        <a href="./zapatos.html"><img src="images/banner2parte.jpg" alt="mujer acostada" width="100%"
+                        <a href="./zapatos.html"><img src="images/banner2parte-min.jpg" alt="mujer acostada" width="100%"
                                 class="hero__imagen"></a>
                     </div>
 
