--- a/sale.html
+++ b/sale.html
@@ -146,7 +146,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div>
-                        <a href="./zapatos.html"><img src="images/banner2parte.jpg" alt="" width="100%"
+                        <a href="./zapatos.html"><img src="images/banner2parte-min.jpg" alt="" width="100%"
                                 class="hero__imagen"></a>
                     </div>
 
