--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <meta name="description" content="Indumentaria Femenina">
     <meta name="keywords"
         content="INDUMENTARIA FEMENINA, ROPA DE MUJER, JUVENIL, ACCESIBLE, ESTILOS, MODA, REDES SOCIALES, FASHION, ENVIOS GRATIS, REMERAS, MUSCULOSAS, BUZOS, CAMPERAS, BLAZERS, CARTERAS, CARTERAS PEQUENAS, MOCHILAS, ZAPATOS DE MUJER, ZAPATOS FEMENINOS, BOTAS, BORCEGOS, CUERO, SALE, DESCUENTOS, DESCUENTOS INVIERNO, CUOTAS SIN INTERES, AHORA 12, AHORA 18, AHORA 24, TARJETAS DE CREDITO, PROMOCIONES, ESTAMPAS, ROPA DE DIA, ROPA DE NOCHE, SHORTS, POLLERAS, GORROS, ACCESORIOS, CINTOS">
+        <meta itemprop="name" content="Novac Indumentaria - Inicio ">
+        <meta itemprop="description" content="Indumentaria Femenina">
+        <meta itemprop="image" content="https://novacindumentaria.000webhostapp.com/images/blazer2-min.jpg">
+        
+        <!-- Facebook Meta Tags -->
+        <meta property="og:url" content="http://novacindumentaria.000webhostapp.com">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Novac Indumentaria - Inicio ">
+        <meta property="og:description" content="Indumentaria Femenina">
+        <meta property="og:image" content="https://novacindumentaria.000webhostapp.com/images/blazer2-min.jpg">
+        
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Novac Indumentaria - Inicio ">
+        <meta name="twitter:description" content="Indumentaria Femenina">
+        <meta name="twitter:image" content="https://novacindumentaria.000webhostapp.com/images/blazer2-min.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
